{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 78,
  "lineage": "ce085447-39d2-313f-6dca-8c1a19c65d02",
  "resources": [
    {
      "module": "module.app_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "M_aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:862311624727:instance/i-0c03b8312c35983e8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c03b8312c35983e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066fab5891dcbcf48",
            "private_dns": "ip-10-0-2-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-073177f62af0cb950",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c3e0db62c608883",
            "tags": {
              "Name": "app-instance"
            },
            "tags_all": {
              "Name": "app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e171810d16827df0"
            ]
          },
          "dependencies": [
            "module.app_security_group.aws_security_group.M_sg",
            "module.app_ssh_key_pair.aws_key_pair.M_login_key",
            "module.vpc.aws_subnet.M_private_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "M_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:security-group/sg-0e171810d16827df0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0e171810d16827df0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "862311624727",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "M_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:security-group/sg-08114c54094fc03d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08114c54094fc03d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "862311624727",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer_instance",
      "mode": "managed",
      "type": "aws_lb",
      "name": "M_cloudethix-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:862311624727:loadbalancer/app/3T-application-lb/994f936143780e85",
            "arn_suffix": "app/3T-application-lb/994f936143780e85",
            "desync_mitigation_mode": "defensive",
            "dns_name": "3T-application-lb-29154773.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:862311624727:loadbalancer/app/3T-application-lb/994f936143780e85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "3T-application-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08114c54094fc03d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08912f8416956fbf6"
              },
              {
                "subnet_id": "subnet-09cbcfc4d957e6c0f"
              }
            ],
            "subnets": [
              "subnet-08912f8416956fbf6",
              "subnet-09cbcfc4d957e6c0f"
            ],
            "vpc_id": "vpc-0994fe75929f23a14",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.load_balancer.aws_security_group.M_sg",
            "module.vpc.aws_subnet.M_public_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "M_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:security-group/sg-0e07f148c28d385a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0e07f148c28d385a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "862311624727",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "M_my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05344e57a78480956",
            "domain": "vpc",
            "id": "eipalloc-05344e57a78480956",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-217-222-159.compute-1.amazonaws.com",
            "public_ip": "3.217.222.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "M_MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:internet-gateway/igw-0df2684c8b3877eb7",
            "id": "igw-0df2684c8b3877eb7",
            "owner_id": "862311624727",
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "M_MY_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05344e57a78480956",
            "association_id": "eipassoc-0f35b82130e3060f1",
            "connectivity_type": "public",
            "id": "nat-03e929f4880c7914b",
            "network_interface_id": "eni-061e05123475e0e5d",
            "private_ip": "10.0.0.37",
            "public_ip": "3.217.222.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09cbcfc4d957e6c0f"
          },
          "dependencies": [
            "module.vpc.aws_eip.M_my_eip",
            "module.vpc.aws_subnet.M_public_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "M_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05b910e9e4b6696871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03e929f4880c7914b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b910e9e4b669687",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.M_my_eip",
            "module.vpc.aws_nat_gateway.M_MY_NAT",
            "module.vpc.aws_route_table.M_PRIVATE_RT",
            "module.vpc.aws_subnet.M_public_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "M_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df2684c8b3877eb7",
            "id": "r-rtb-04a5c63360e2747ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a5c63360e2747ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.M_MY_IGW",
            "module.vpc.aws_route_table.M_PUBLIC_RT",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "M_PRIVATE_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:route-table/rtb-05b910e9e4b669687",
            "id": "rtb-05b910e9e4b669687",
            "owner_id": "862311624727",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "M_PUBLIC_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:route-table/rtb-04a5c63360e2747ca",
            "id": "rtb-04a5c63360e2747ca",
            "owner_id": "862311624727",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "M_RTAS_PRIVATE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1c125b67c4361db",
            "route_table_id": "rtb-05b910e9e4b669687",
            "subnet_id": "subnet-03c3e0db62c608883"
          },
          "dependencies": [
            "module.vpc.aws_route_table.M_PRIVATE_RT",
            "module.vpc.aws_subnet.M_private_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051a8cd83a7b25c78",
            "route_table_id": "rtb-05b910e9e4b669687",
            "subnet_id": "subnet-008bef9352e1f2fcc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.M_PRIVATE_RT",
            "module.vpc.aws_subnet.M_private_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "M_RTAS_PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2fabca6899074a2",
            "route_table_id": "rtb-04a5c63360e2747ca",
            "subnet_id": "subnet-09cbcfc4d957e6c0f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.M_PUBLIC_RT",
            "module.vpc.aws_subnet.M_public_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9d89c167529bb1",
            "route_table_id": "rtb-04a5c63360e2747ca",
            "subnet_id": "subnet-08912f8416956fbf6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.M_PUBLIC_RT",
            "module.vpc.aws_subnet.M_public_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "M_private_subnets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-03c3e0db62c608883",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c3e0db62c608883",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-008bef9352e1f2fcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008bef9352e1f2fcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "M_public_subnets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-09cbcfc4d957e6c0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cbcfc4d957e6c0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:subnet/subnet-08912f8416956fbf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08912f8416956fbf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862311624727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "M_MY_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:vpc/vpc-0994fe75929f23a14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c12ea68cb298ea8f",
            "default_route_table_id": "rtb-0adae52e80b025f32",
            "default_security_group_id": "sg-0689eec70b946daf7",
            "dhcp_options_id": "dopt-073049f9f1a2d79f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0994fe75929f23a14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adae52e80b025f32",
            "owner_id": "862311624727"
          }
        }
      ]
    },
    {
      "module": "module.web_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "M_aws_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:862311624727:instance/i-0707eb0ee2cdb0122",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0707eb0ee2cdb0122",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "web-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088e3257a9aa475da",
            "private_dns": "ip-10-0-0-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008c7f659680a3618",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cbcfc4d957e6c0f",
            "tags": {
              "Name": "web-instance"
            },
            "tags_all": {
              "Name": "web-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c99e085c01aa7739"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.M_public_subnets01",
            "module.vpc.aws_vpc.M_MY_VPC",
            "module.web_security_group.aws_security_group.M_sg",
            "module.web_ssh_key_pair.aws_key_pair.M_login_key"
          ]
        }
      ]
    },
    {
      "module": "module.web_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "M_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862311624727:security-group/sg-0c99e085c01aa7739",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c99e085c01aa7739",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "862311624727",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0994fe75929f23a14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.M_MY_VPC"
          ]
        }
      ]
    }
  ]
}